Refactor: Corrección de métodos en Service y sincronización con Controller